# voice-conversation

./: .gitignore  LIGHT_CONTROL_README.md  README.md  TROUBLESHOOTING.md  audio_config.py  bot_fast_api.py  bot_websocket_server.py  crystal_light_controller.py  env.example  lore_loader.py  models.py  pyproject.toml  render.yaml  requirements.txt  server.py  simple_voice_chatbot.py  speaking_light_observer.py  state.py  test_conversation_timeout.py  test_light_controller.py
client/: README.md  index.html  tsconfig.json  vite.config.js
client/src/: app.js  app.ts  light_controller.js  light_controller.ts  style.css
lore/: IT_LAW_Knowledgebase_reduced.txt  Kristall.txt  Letzte_Wacht.txt  ReichDerAsche.txt  auftruf.txt  erbauer.txt  hintergrund.txt  idm_hintergrund.txt  it-themen.txt  lager.txt  quantum.txt  schacht66.txt
lore/bots/Asche/: 1_kristallwesen.txt  2_ReichDerAsche.txt  3_Eingang.txt  4_Aschelaeufer.txt  5_Wissen.txt  9_Prompt.txt  config.json
lore/bots/BleiHerz/: 1_kristallwesen.txt  2_codes.txt  3_Raetsel.txt  4_wissen.txt  8_Bimmelprotokoll.txt  config.json
lore/bots/Charon/: charon_wesen.txt  config.json
lore/bots/Kore/: config.json  erd_wissen.txt
lore/bots/Kristallkammer/: 1_kristallwesen.txt  2_codes.txt  3_wissen.txt  4_maschine.txt  5_FloraFauna.txt  6_batterie.txt  7_Mottenschutz.txt  8_Bimmelprotokoll_mit_Zert.txt  config.json
lore/bots/Puck/: config.json  kristall_wesen.txt  quantum_wissen.txt
lore/bots/Zephyr/: config.json  (+2 more)
lore/unused/: IT_LAW_Knowledgebase.md  Kristall.txt  Outtimewissen.md  idm_hintergrund.txt  vor1000Jahren.txt
